# graficas

./: CMakeLists.txt  README.md
common/: CMakeLists.txt  gltext.h  myshader.h
e01/: ejercicio01  ejercicio01.cpp
e02/: SimpleVertexShader.vertexshader  ejercicio02  ejercicio02.cpp
e03/: SimpleFragmentShader.fragmentshader  ejercicio03  ejercicio03.cpp
e04/: backup.ejercicio04.cpp  ejercicio04  ejercicio04.cpp  shader.fs  shader.vs  test.cpp
e05/: ejercicio04.cpp  ejercicio05  ejercicio05.cpp  hello_triangle_3d.cpp  shader_2d.vs  shader_colors.vs
e06/: ejercicio06  ejercicio06.cpp
e07/: backup.cpp  ejercicio07  ejercicio07.cpp  shader_no_transform.vs  shader_text.vs
e08/: ejercicio08  ejercicio08.cpp  temp
e09/: ejercicio09  ejercicio09.cpp  shader.vs  text_shader.fs
e10/: visualizacion.html  visualizacion.js
e11/: sombra.html  sombra.js
e13/: esfera.html  esfera.js  style.css
e14/: build  build.1  package-lock.json  texturas.html  texturas.js
e15/: particulas.html  particulas.js  style.css
e16/: cylinder.js  humanoide.html  humanoide.js  style.css
